# Investment_Daily

./: .gitignore  AGENTS.md  README.md  TODO.md  design_storage.md  error_log.md  project_context.md  pyproject.toml  spec.md
investment_bot/: config.py  main.py  requirements.txt
investment_bot/services/: google_sheet.py  llm_analyzer.py  market_data.py  tech_analysis.py  telegram_bot.py
investment_bot/utils/: data_store.py  db_manager.py  formatters.py
test_script/: debug_google_sheet.py  test_cli_subprocess.py  test_gemini.py  test_services.py  test_storage.py
